Allow removing non-existent folders from include and exclude lists

Summary:
Currently, if you add a folder to Baloo's `includeFolders` or `excludeFolders` lists, it cannot be removed again if it has been deleted. This patch fixes that for both `balooctl` and also the KCM.

BUG: 375370
FIXED-IN: 5.51

Test Plan:
```
mkdir ~/foobar-test
balooctl config add excludeFolders ~/foobar-test
rmdir ~/foobar-test
balooctl config remove excludeFolders ~/foobar-test
```

Without the patch, `balooctl` exits with an error, reports "Path does not exist", and does not remove the entry.

With the patch, `balooctl` exits cleanly with no error and removes the path.

Works from the KCM, too.

Reviewers: #baloo, bruns

Reviewed By: #baloo, bruns

Subscribers: kde-frameworks-devel

Tags: #frameworks, #baloo

Differential Revision: https://phabricator.kde.org/D15844